# dotspy

./: .gitignore  .pre-commit-config.yaml  DIAGRAMS.md  MINDMAP_API_CHANGES.md  README.md  pyproject.toml  test.dot  test_uml_wrapping
dotspy/: __init__.py  attributes.py  base_graph.py  builtin_styles.py  constants.py  context.py  edge.py  graph.py  html_utils.py  node.py  renderer.py  style.py  themes.py  utils.py
dotspy/diagrams/: __init__.py  base.py  mindmap.py  plantuml_parser.py  uml.py
examples/: HTML_NODE_README.md  architecture.dot  architecture.py  diagrams  diagrams_example.py  html_node_example.py  mindmap_new_api.py  quickstart.ipynb  resource_pool_trtllm.dot  resource_pool_trtllm.py  resource_pool_trtllm_2nodes.dot  resource_pool_trtllm_2nodes.py  rollout_logic.dot  rollout_logic.py  uml_plantuml_features.py  workflow.dot  workflow.py
tests/: test_base_graph.py  test_diagrams.py  test_edge.py  test_graph.py  test_html_node.py  test_integration.py  test_jupyter_repr.py  test_nesting.py  test_node.py  test_renderer.py  test_style.py  test_themes.py
